Fixed front-end.
Now responsive. Now doesn't look completely terrible. Still need to fix
hitting the enter button...

--- a/css/this.css
+++ b/css/this.css
@@ -1,17 +1,14 @@
-
 @import url(http://fonts.googleapis.com/css?family=Antic+Slab);
 
-html, body 
-{
-  height: 100%;
-  font-family: 'Antic Slab', serif;
+html,body {
+  height:100%;
 }
 
 .wrap h1 
 {
   font-family: 'Antic Slab', serif;
-  font-size: 80px;
-  color: #3162a2;
+  font-size:80px;
+  color:#3162a2;
 }
 
 
@@ -20,62 +17,62 @@ html, body
 {
   margin: 0 auto;
   width: 100%;
-  min-height: 500px;
-  background-color: #f2f5f8;
-  overflow: hidden;
+  min-height: 400px;
+  background-color:#f2f5f8;
+  overflow:hidden;
 }
 .wrap-no-background 
 {
   margin: 0 auto;
   width: 100%;
-  background-color: #ffffff;
-  color: #c6ccd2;
-  overflow: hidden;
+  background-color:#ffffff;
+  color:#c6ccd2;
+  overflow:hidden;
 }
 
 .wrap a 
 {
-  color: #efefef;
-  text-decoration: none;
+  color:#efefef;
+  text-decoration:none;
 }
 
 .v-center 
 {
-  margin-top: 7%;
+  margin-top:7%;
 }
   
 .wrap h1 
 {
   font-family: 'Antic Slab', serif;
-  font-size: 55px;
-  color: #3162a2;
+  font-size:55px;
+  color:#3162a2;
 }
 
 
 .wrap-no-background h1 
 {
   font-family: 'Antic Slab', serif;
-  font-size: 40px;
-  color: #3162a2;
+  font-size:40px;
+  color:#3162a2;
 }
 .wrap-no-background h2 
 {
   font-family: 'Antic Slab', serif;
-  font-size: 40px;
-  color: #db7560;
+  font-size:40px;
+  color:#db7560;
 }
 
 
-#searchResults
+.wrap-no-background p
 {
 	font-size: 1.5em;
 	color: #65abd0;
 }
-strong
+.wrap-no-background p strong
 {
 	color: #db7560;
 }
-em
+.wrap-no-background p em
 {
 	color: #3162a2;
 	font-style: normal;
